--- a/tavins_website.stylesheet_2.0.css
+++ b/tavins_website.stylesheet_2.0.css
@@ -137,6 +137,10 @@ h2 {
 	font-size: 50px;
 }
 
+/*styles titles*/
+#title {
+	text-shadow: 14px 14px 8px #04171f;
+}
 
 
 
@@ -162,6 +166,9 @@ table {
 	margin: 20px;
 	padding: 75px;
 	border-radius: 300px;
+	border: solid;
+	border-width: 5px;
+	border-color: #1f6480;
 }
 
 /*sets row height and font color of table*/
@@ -202,6 +209,7 @@ td {
 	margin: 80px 0 0 17px;
 	max-width: 400px;
 	min-width: 250px;
+	text-shadow: 10px 10px 4px #04171f;
 }
 
 /*styles resume link*/
@@ -294,6 +302,7 @@ td {
 /*aligns contact page*/
 #contactPage {
 	align-items: center;
+	text-shadow: 10px 10px 4px #04171f;
 }
 
 /*spaces elements from page title*/
@@ -501,11 +510,6 @@ h3 {
 
 
 	/*style for projects page*/
-	/*styling for class of container of each project button*/
-	.projectBox {
-		
-	}
-
 	/*sizing of first project button*/
 	#projectBox1 { 
 		flex-flow: column;
